静态文件浏览器缓存问题

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0134f80e0ea9c33d727a",
+    "/css/app.css": "/css/app.css?id=a12ab85f8bb3fb2076ea"
 }
